# coco_eval

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  loadAnns.pyx  main  main.cpp  my_program.cpp
libs/: CMakeLists.txt  Makefile  cmake_install.cmake  coco.cpp  coco.hpp  data_loader.hpp  dataloader.cpp  lib.hpp
loadAnns/: loadAnns.cpp  loadAnns.h
